--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.16.2",
+    "@astrojs/netlify": "^2.2.0",
     "@astrojs/tailwind": "^3.1.1",
-    "astro": "^2.1.5",
+    "astro": "^2.1.7",
     "tailwindcss": "^3.2.7"
   }
 }
