--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@astrojs/image": "^0.16.2",
     "@astrojs/netlify": "^2.2.0",
+    "@astrojs/preact": "^2.1.0",
     "@astrojs/tailwind": "^3.1.1",
     "astro": "^2.1.7",
+    "preact": "^10.13.2",
     "tailwindcss": "^3.2.7"
   }
 }
