--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/preact": "^2.1.0",
     "@astrojs/tailwind": "^3.1.1",
     "astro": "^2.1.7",
+    "nodemailer": "^6.9.1",
     "preact": "^10.13.2",
     "tailwindcss": "^3.2.7"
   }
