--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@astrojs/image": "^0.16.2",
     "@astrojs/netlify": "^2.2.0",
-    "@astrojs/preact": "^2.1.0",
+    "@astrojs/preact": "^2.2.1",
+    "@astrojs/svelte": "^3.1.0",
     "@astrojs/tailwind": "^3.1.1",
-    "astro": "^2.1.7",
+    "astro": "^2.9.6",
     "nodemailer": "^6.9.1",
     "preact": "^10.13.2",
+    "svelte": "^4.1.2",
     "tailwindcss": "^3.2.7"
   }
 }
