--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "bda",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,12 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/netlify": "^3.0.1",
-    "@astrojs/preact": "^3.0.0",
+    "@astrojs/netlify": "^3.0.2",
     "@astrojs/svelte": "^4.0.2",
     "@astrojs/tailwind": "^5.0.0",
-    "astro": "^3.1.3",
+    "astro": "^3.1.4",
     "nodemailer": "^6.9.1",
-    "tailwindcss": "^3.2.7"
+    "svelte": "^4.2.1",
+    "tailwindcss": "^3.3.3"
   }
 }
